refactor: Ajustar conteúdo do infográfico conforme solicitação do gestor
- Caixa 1: Remover 'Objetivo:' e atualizar descrição com os 5 eixos
- Caixa 2: Mudar 'Articulação Institucional' para 'Articulação'
- Caixa 2: Alterar 'Monitoramento' para 'Monitoramento e Avaliação'
- Caixa 3: Remover '(controle)' de Agricultores Não Atendidos
- Caixa 4: Adicionar fluxo visual do processo (Dados > Evidências > Achados > Recomendações)
- Caixa 5: Atualizar descrição focando nos 5 eixos da auditoria
- Padronizar: Iniciar com minúscula textos após dois pontos em todos os painéis

--- a/infografico_auditoria.html
+++ b/infografico_auditoria.html
@@ -654,8 +654,8 @@
                     <div class="stage-number">1</div>
                     <div class="stage-icon">🌿</div>
                     <div class="stage-title">O Ponto de Partida</div>
-                    <div class="stage-subtitle">Objetivo: Fortalecer a Agricultura Familiar</div>
-                    <div class="stage-description">Avaliar se os serviços da Emater-RO geram resultados concretos em renda, produtividade e acesso a mercados para o produtor.</div>
+                    <div class="stage-subtitle">Fortalecer a Agricultura Familiar</div>
+                    <div class="stage-description">Avaliar se os serviços da Emater-RO são efetivos, alcançam o público-alvo, estão bem articulados, contribuem para a inserção produtiva e são monitorados de forma sistemática, gerando resultados concretos para a agricultura familiar.</div>
                     <div class="info-badge">Clique para detalhes</div>
                 </div>
                 <div class="arrow">→</div>
@@ -668,7 +668,7 @@
                     <div class="stage-icon">🔍</div>
                     <div class="stage-title">As Lentes da Avaliação</div>
                     <div class="stage-subtitle">Os Cinco Eixos de Análise</div>
-                    <div class="stage-description">A análise foca em: Efetividade, Alcance, Articulação Institucional, Inteligência de Mercado e Monitoramento.</div>
+                    <div class="stage-description">A análise foca em: Efetividade, Alcance, Articulação, Inteligência de Mercado e Monitoramento e Avaliação.</div>
                     <div class="info-badge">Clique para detalhes</div>
                 </div>
                 <div class="arrow">→</div>
@@ -707,7 +707,7 @@
                     <div class="stage-icon">📊</div>
                     <div class="stage-title">Resultado Final</div>
                     <div class="stage-subtitle">Relatório Orientado à Melhoria</div>
-                    <div class="stage-description">Documento final com diagnóstico e recomendações para o fortalecimento institucional e das políticas de desenvolvimento rural.</div>
+                    <div class="stage-description">Recomendações a partir dos cinco eixos da auditoria, com foco no aperfeiçoamento da política pública de Ater e no fortalecimento da agricultura familiar.</div>
                     <div class="info-badge">Clique para detalhes</div>
                 </div>
             </article>
@@ -720,10 +720,10 @@
             <div class="detail-content">
                 <p>Esta etapa estabelece o fundamento da auditoria operacional, focando em avaliar o impacto real dos serviços de assistência técnica e extensão rural (Ater) oferecidos pela Emater-RO.</p>
                 <ul>
-                    <li><strong>Objetivo Central:</strong> Fortalecer a agricultura familiar através de políticas públicas efetivas</li>
-                    <li><strong>Foco Avaliativo:</strong> Resultados concretos em renda, produtividade e acesso a mercados</li>
-                    <li><strong>Escopo:</strong> Análise da execução da política de Ater no estado de Rondônia</li>
-                    <li><strong>Beneficiários:</strong> Produtores rurais familiares e a sociedade como um todo</li>
+                    <li><strong>Objetivo Central:</strong> fortalecer a agricultura familiar através de políticas públicas efetivas</li>
+                    <li><strong>Foco Avaliativo:</strong> resultados concretos em renda, produtividade e acesso a mercados</li>
+                    <li><strong>Escopo:</strong> análise da execução da política de Ater no estado de Rondônia</li>
+                    <li><strong>Beneficiários:</strong> produtores rurais familiares e a sociedade como um todo</li>
                 </ul>
             </div>
         </section>
@@ -734,11 +734,11 @@
             <div class="detail-content">
                 <p>A auditoria operacional utiliza cinco dimensões analíticas para avaliar a política de Ater de forma holística e estruturada:</p>
                 <ul>
-                    <li><strong>Efetividade:</strong> Os serviços atingem seus objetivos propostos?</li>
-                    <li><strong>Alcance:</strong> Quantos produtores são atendidos? Qual é a cobertura geográfica?</li>
-                    <li><strong>Articulação Institucional:</strong> Como a Emater-RO se relaciona com outras instituições?</li>
-                    <li><strong>Inteligência de Mercado:</strong> Os produtores recebem informações sobre oportunidades de mercado?</li>
-                    <li><strong>Monitoramento:</strong> Existe acompanhamento sistemático dos resultados?</li>
+                    <li><strong>Efetividade:</strong> os serviços atingem seus objetivos propostos?</li>
+                    <li><strong>Alcance:</strong> quantos produtores são atendidos? Qual é a cobertura geográfica?</li>
+                    <li><strong>Articulação:</strong> como a Emater-RO se relaciona com outras instituições?</li>
+                    <li><strong>Inteligência de Mercado:</strong> os produtores recebem informações sobre oportunidades de mercado?</li>
+                    <li><strong>Monitoramento e Avaliação:</strong> existem informações, rotinas e uso de dados para acompanhar resultados e orientar decisões?</li>
                 </ul>
             </div>
         </section>
@@ -749,11 +749,11 @@
             <div class="detail-content">
                 <p>Nesta fase, os auditores coletam dados diretamente no campo através de entrevistas estruturadas e formulários digitais aplicados a múltiplos públicos:</p>
                 <ul>
-                    <li><strong>Extensionistas:</strong> Profissionais que executam os serviços de Ater</li>
-                    <li><strong>Gerentes Locais:</strong> Responsáveis pela gestão das unidades da Emater-RO</li>
-                    <li><strong>Agricultores Atendidos:</strong> Produtores que recebem os serviços</li>
-                    <li><strong>Agricultores Não Atendidos:</strong> Produtores que não recebem os serviços (controle)</li>
-                    <li><strong>Instrumentos Digitais:</strong> Tablets e aplicativos para registro em tempo real</li>
+                    <li><strong>Extensionistas:</strong> profissionais que executam os serviços de Ater</li>
+                    <li><strong>Gerentes Locais:</strong> responsáveis pela gestão das unidades da Emater-RO</li>
+                    <li><strong>Agricultores Atendidos:</strong> produtores que recebem os serviços</li>
+                    <li><strong>Agricultores Não Atendidos:</strong> produtores que não recebem os serviços</li>
+                    <li><strong>Instrumentos Digitais:</strong> tablets e aplicativos para registro em tempo real</li>
                 </ul>
             </div>
         </section>
@@ -764,11 +764,12 @@
             <div class="detail-content">
                 <p>Os dados brutos coletados no campo são processados e transformados em informações estratégicas através de análise técnica rigorosa:</p>
                 <ul>
-                    <li><strong>Consolidação:</strong> Todos os dados são integrados em uma base digital centralizada</li>
-                    <li><strong>Tratamento:</strong> Limpeza, validação e padronização dos dados</li>
-                    <li><strong>Análise:</strong> Aplicação de técnicas estatísticas e qualitativas</li>
-                    <li><strong>Geração de Achados:</strong> Identificação de padrões, tendências e evidências técnicas</li>
-                    <li><strong>Conclusões:</strong> Síntese das descobertas para o relatório final</li>
+                    <li><strong>Fluxo do Processo:</strong> Dados coletados > Dados tratados > Evidências > Achados > Recomendações</li>
+                    <li><strong>Consolidação:</strong> todos os dados são integrados em uma base digital centralizada</li>
+                    <li><strong>Tratamento:</strong> limpeza, validação e padronização dos dados</li>
+                    <li><strong>Análise:</strong> aplicação de técnicas estatísticas e qualitativas</li>
+                    <li><strong>Geração de Achados:</strong> identificação de padrões, tendências e evidências técnicas</li>
+                    <li><strong>Conclusões:</strong> síntese das descobertas para o relatório final</li>
                 </ul>
             </div>
         </section>
@@ -779,11 +780,11 @@
             <div class="detail-content">
                 <p>O relatório final consolida todas as descobertas e apresenta recomendações estratégicas baseadas em evidências técnicas sólidas:</p>
                 <ul>
-                    <li><strong>Diagnóstico Abrangente:</strong> Análise completa da execução da política de Ater</li>
-                    <li><strong>Recomendações Específicas:</strong> Sugestões práticas para melhorias institucionais</li>
-                    <li><strong>Foco na Melhoria:</strong> Orientação para o fortalecimento da agricultura familiar</li>
-                    <li><strong>Impacto Potencial:</strong> Contribuição para políticas públicas mais efetivas</li>
-                    <li><strong>Transparência:</strong> Documento público que contribui para a accountability</li>
+                    <li><strong>Diagnóstico Abrangente:</strong> análise completa da execução da política de Ater</li>
+                    <li><strong>Recomendações Específicas:</strong> sugestões práticas para melhorias institucionais</li>
+                    <li><strong>Foco na Melhoria:</strong> orientação para o fortalecimento da agricultura familiar</li>
+                    <li><strong>Impacto Potencial:</strong> contribuição para políticas públicas mais efetivas</li>
+                    <li><strong>Transparência:</strong> documento público que contribui para a accountability</li>
                 </ul>
             </div>
         </section>
