fix: Corrigir inicialização do VLibras
- Mover inicialização do VLibras para fora do evento load
- Executar script imediatamente após carregamento
- Garantir que widget apareça corretamente

--- a/infografico_auditoria.html
+++ b/infografico_auditoria.html
@@ -1298,10 +1298,11 @@
             }
         });
 
-        // Inicializar VLibras
-        window.addEventListener('load', function() {
-            new window.VLibras.Widget('https://vlibras.gov.br/app');
-        });
+    </script>
+    
+    <!-- VLibras Initialization -->
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
 </body>
 </html>
